--- a/tables/demon-vs-infomap.tex
+++ b/tables/demon-vs-infomap.tex
@@ -1,7 +1,7 @@
 \begin{tabularx}{\textwidth}{|X|P{1.7cm}|P{1.7cm}|}
 \hline
 \textbf{Metric} & \textbf{\demon} & \textbf{\infomap} \\ \hline
-\% of networks with null communities & 0.52 & 0.0 \\ \hline
+Fraction of networks with null communities & 0.52 & 0.0 \\ \hline
 Number of communities per context (avg) & 1.92 & 18.88 \\ \hline
 Fraction of network users added to the DB  (avg) & 0.06 & 0.59 \\ \hline
 Fraction of repeat users  added to the DB across networks & 0.28 & 0.37 \\ \hline
