added final charts

--- a/preamble.tex
+++ b/preamble.tex
@@ -54,3 +54,4 @@
 \usepackage{rotating}
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
+\usepackage{subcaption}
